[Dev] global change font-family

--- a/public/assets/works/MovingBoxes/styles.css
+++ b/public/assets/works/MovingBoxes/styles.css
@@ -186,7 +186,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-The-multipurpose-ga-2CDD97E0-1083-4AE3-9119-2005FD281EF2 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -199,35 +199,35 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-The-multipurpose-ga-2CDD97E0-1083-4AE3-9119-2005FD281EF2 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	color: #404040 ;
 	font-size: 18.0px ;
 }
 
 .sk-asset.sk-The-multipurpose-ga-2CDD97E0-1083-4AE3-9119-2005FD281EF2 .span2 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	color: #404040 ;
 	font-size: 18.0px ;
 }
 
 .sk-asset.sk-The-multipurpose-ga-2CDD97E0-1083-4AE3-9119-2005FD281EF2 .span3 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	color: #404040 ;
 	font-size: 18.0px ;
 }
 
 .sk-asset.sk-The-multipurpose-ga-2CDD97E0-1083-4AE3-9119-2005FD281EF2 .span4 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	color: #404040 ;
 	font-size: 18.0px ;
 }
 
 .sk-asset.sk-The-multipurpose-ga-2CDD97E0-1083-4AE3-9119-2005FD281EF2 .span5 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	color: #404040 ;
 	font-size: 18.0px ;
@@ -241,7 +241,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-What-and-Why-is-the-1B0E20AB-E1E3-485C-AF95-F8EECAA7A7C6 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -255,7 +255,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-What-and-Why-is-the-1B0E20AB-E1E3-485C-AF95-F8EECAA7A7C6 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -271,7 +271,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-BACKGROUND-INFO-5A73D443-3AC1-498E-BAA0-A830276AAD0F {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -285,7 +285,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-BACKGROUND-INFO-5A73D443-3AC1-498E-BAA0-A830276AAD0F .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -301,7 +301,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-USER-BEHAVIOR-ANALYS-EAE40720-089B-4BE4-AA31-2EC6C34C9C86 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -315,7 +315,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-USER-BEHAVIOR-ANALYS-EAE40720-089B-4BE4-AA31-2EC6C34C9C86 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -331,7 +331,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Identify-Problems-99EFD970-D0E6-41E7-B99E-4BFA2AD28B09 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -345,7 +345,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Identify-Problems-99EFD970-D0E6-41E7-B99E-4BFA2AD28B09 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -421,7 +421,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Design-Development-2158CBE5-6F7B-42E7-8065-A3ED8B9773B4 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -435,7 +435,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Design-Development-2158CBE5-6F7B-42E7-8065-A3ED8B9773B4 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -451,7 +451,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-SPACE-ANALYSIS-F9DCAEA0-332B-42B7-900F-20C07F35161E {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -465,7 +465,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-SPACE-ANALYSIS-F9DCAEA0-332B-42B7-900F-20C07F35161E .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -481,7 +481,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Teammates-0E0D2DA9-0F84-4202-88E7-8740DE76F7E9 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -495,7 +495,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Teammates-0E0D2DA9-0F84-4202-88E7-8740DE76F7E9 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -511,7 +511,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Award-B5FE6D40-E668-4DA0-A01E-522BA9D78E5C {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -525,7 +525,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Award-B5FE6D40-E668-4DA0-A01E-522BA9D78E5C .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -541,7 +541,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Shuang-Bi-Neng-Zhu-192CB9FB-63D6-44BD-B635-FD70CE070574 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -555,7 +555,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Shuang-Bi-Neng-Zhu-192CB9FB-63D6-44BD-B635-FD70CE070574 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -571,7 +571,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Finalist-of-3-with--C7802B2B-88B4-46DF-A4A3-AC60690BC45A {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -585,7 +585,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Finalist-of-3-with--C7802B2B-88B4-46DF-A4A3-AC60690BC45A .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -631,7 +631,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-The-Moving-Boxes-892F2F76-3AEA-4C32-89A2-6E2E50F000C7 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -645,7 +645,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-The-Moving-Boxes-892F2F76-3AEA-4C32-89A2-6E2E50F000C7 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -668,7 +668,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Installation-Locatio-F6D5B9D1-C294-4C89-B652-7B1CD1C0A8A0 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -682,7 +682,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Installation-Locatio-F6D5B9D1-C294-4C89-B652-7B1CD1C0A8A0 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -698,7 +698,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Gallery-space-in-Sop-F5234622-BAC6-4DC0-A49C-C4E70C8BA230 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -712,7 +712,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Gallery-space-in-Sop-F5234622-BAC6-4DC0-A49C-C4E70C8BA230 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -735,7 +735,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Stakeholders-81866DFA-8CFB-42D6-981D-4F51A174616C {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -749,7 +749,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Stakeholders-81866DFA-8CFB-42D6-981D-4F51A174616C .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -765,7 +765,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Schools-of-Architect-69D07E49-9107-4305-96C5-242F27960694 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -779,7 +779,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Schools-of-Architect-69D07E49-9107-4305-96C5-242F27960694 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -802,7 +802,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Goal-2FB1BD22-713C-4DEC-8B7A-F5E28391B3F1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -816,7 +816,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Goal-2FB1BD22-713C-4DEC-8B7A-F5E28391B3F1 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -832,7 +832,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Design-a-problemsol-51C43F4E-029F-450C-A693-974FEE098755 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -846,7 +846,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Design-a-problemsol-51C43F4E-029F-450C-A693-974FEE098755 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -921,7 +921,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Works-8C577EBA-B3E2-4CEF-9AC9-A6C45B5C7B28 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -935,7 +935,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Works-8C577EBA-B3E2-4CEF-9AC9-A6C45B5C7B28 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -951,7 +951,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Sides-F550B244-437C-4A41-99C6-0EE7B249C157 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -965,7 +965,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Sides-F550B244-437C-4A41-99C6-0EE7B249C157 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -981,7 +981,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Resume-FE02C4A2-D595-48FE-A86A-37FB6C9A77C9 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -995,7 +995,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Resume-FE02C4A2-D595-48FE-A86A-37FB6C9A77C9 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -1011,7 +1011,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk--S--16552D1B-7816-46A4-B950-B714B6D225BB {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -1025,7 +1025,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk--S--16552D1B-7816-46A4-B950-B714B6D225BB .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -1048,7 +1048,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Enclore-for-privary-B054018F-834B-4C4B-9D7C-0F648CD4F3BE {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -1062,7 +1062,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Enclore-for-privary-B054018F-834B-4C4B-9D7C-0F648CD4F3BE .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -1078,7 +1078,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Functionality-Requir-5B332534-AB05-4891-BD97-E40C958D34F4 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -1092,7 +1092,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Functionality-Requir-5B332534-AB05-4891-BD97-E40C958D34F4 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -1108,7 +1108,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-FUNCTIONS-IN-APPLICA-CA7DED45-6F53-47C2-B3FA-556C7AEDED1A {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -1122,7 +1122,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-FUNCTIONS-IN-APPLICA-CA7DED45-6F53-47C2-B3FA-556C7AEDED1A .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -1827,7 +1827,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-CONSTRUCTION-DETAILS-F4A74FB7-9648-473F-A5B3-149B1E5CC5BF {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -1841,7 +1841,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-CONSTRUCTION-DETAILS-F4A74FB7-9648-473F-A5B3-149B1E5CC5BF .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -1927,7 +1927,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-STORY-BOARD-ABE0E935-F990-42E4-8EA1-413EF82F80D3 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -1941,7 +1941,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-STORY-BOARD-ABE0E935-F990-42E4-8EA1-413EF82F80D3 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
@@ -1957,7 +1957,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-The-daily-story-of-o-4A002358-419F-46B1-A358-527B420F86F8 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 400 ;
 	font-style: undefined ;
@@ -1971,7 +1971,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-The-daily-story-of-o-4A002358-419F-46B1-A358-527B420F86F8 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 400 ;
 	display: table-cell;
 	vertical-align: top;
@@ -2376,7 +2376,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Connect-with-me-169D3EAB-C1A2-4614-801E-CC55FE00DAA8 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-stretch: "undefined" ;
 	font-weight: 700 ;
 	font-style: undefined ;
@@ -2390,7 +2390,7 @@ only screen and (min-device-pixel-ratio: 3) {
 }
 
 .sk-asset.sk-Connect-with-me-169D3EAB-C1A2-4614-801E-CC55FE00DAA8 .span1 {
-	font-family: "Tsukushi A Round Gothic" ;
+	font-family: "Nunito", sans-serif;
 	font-weight: 700 ;
 	display: table-cell;
 	vertical-align: top;
